--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
 		
 		<!-- Thymeleaf -->
 		<thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
+		
+		<!-- Bean Validation / Hibernate Validator -->
+		<hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
 	</properties>
 	
 	<build>
@@ -80,6 +83,14 @@
 		  <groupId>org.thymeleaf</groupId>
 		  <artifactId>thymeleaf-spring5</artifactId>
 		  <version>${thymeleaf.version}</version>
+		</dependency>
+		
+		<!-- Bean Validation / Hibernate Validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate-validator.version}</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
