--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,9 @@
 		
 		<!-- Spring Data JPA -->
 		<spring-data-jpa.version>2.1.10.RELEASE</spring-data-jpa.version>
+		
+		<!-- Jackson - JSON -->
+		<jackson-core.version>2.10.2</jackson-core.version>
 	</properties>
 	
 	<build>
@@ -182,6 +185,14 @@
 		 	<groupId>org.springframework.data</groupId>
 		 	<artifactId>spring-data-jpa</artifactId>
 		 	<version>${spring-data-jpa.version}</version>
+		 </dependency>
+		 
+		 <!-- Jackson - JSON -->
+		 <dependency>
+		 	<groupId>com.fasterxml.jackson.core</groupId>
+		 	<artifactId>jackson-databind</artifactId>
+		 	<version>${jackson-core.version}</version>
+		 	<scope>compile</scope>
 		 </dependency>
 	</dependencies>
 </project>
