--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,9 @@
 		
 		<!-- Jackson - JSON -->
 		<jackson-core.version>2.10.2</jackson-core.version>
+		
+		<!-- thumbnailator - Gerar thumbnail -->
+		<thumbnailator.version>0.4.8</thumbnailator.version>
 	</properties>
 	
 	<build>
@@ -192,6 +195,13 @@
 		 	<groupId>com.fasterxml.jackson.core</groupId>
 		 	<artifactId>jackson-databind</artifactId>
 		 	<version>${jackson-core.version}</version>
+		 	<scope>compile</scope>
+		 </dependency>
+		 
+		 <dependency>
+		 	<groupId>net.coobird</groupId>
+		 	<artifactId>thumbnailator</artifactId>
+		 	<version>${thumbnailator.version}</version>
 		 	<scope>compile</scope>
 		 </dependency>
 	</dependencies>
