finalizando cadastro de clientes e implementando cache

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,9 @@
 		
 		<!-- Thymeleaf Extras Attributes -->
 		<thymeleaf-extras-data-attribute.version>2.0.1</thymeleaf-extras-data-attribute.version>
+		
+		<!-- Cache - Guava -->
+		<guava.version>20.0</guava.version>
 	</properties>
 	
 	<build>
@@ -103,6 +106,13 @@
           			<artifactId>commons-logging</artifactId>
         		</exclusion>
 			</exclusions>
+		</dependency>
+		
+		<!-- Spring Context Support -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<scope>compile</scope>
 		</dependency>
 		
 		<!-- Servlet API -->
@@ -213,6 +223,14 @@
 		    <artifactId>thymeleaf-extras-data-attribute</artifactId>
 		    <version>${thymeleaf-extras-data-attribute.version}</version>
 		    <scope>compile</scope>
+		</dependency>
+		
+		<!-- Cache -Guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
