--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,9 @@
 		
 		<!-- Apache Beans Util -->
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
+		
+		<!-- Spring Security -->
+		<spring-security-web.version>5.3.0.RELEASE</spring-security-web.version>
 	</properties>
 	
 	<build>
@@ -230,6 +233,14 @@
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 			<version>${commons-beanutils.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring-security-web.version}</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
