--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 		<commons-beanutils.version>1.9.2</commons-beanutils.version>
 		
 		<!-- Spring Security -->
-		<spring-security-web.version>5.3.0.RELEASE</spring-security-web.version>
+		<spring-security.version>5.3.0.RELEASE</spring-security.version>
 	</properties>
 	
 	<build>
@@ -240,8 +240,20 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${spring-security-web.version}</version>
+			<version>${spring-security.version}</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring-security.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-core</artifactId>
+		    <version>${spring-security.version}</version>
+		    <scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
