--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,9 @@
 		
 		<!-- Spring Security -->
 		<spring-security.version>5.3.0.RELEASE</spring-security.version>
+		
+		<!-- Thymeleaf Extras Spring Security -->
+		<thymeleaf-extras-springsecurity4.version>3.0.4.RELEASE</thymeleaf-extras-springsecurity4.version>
 	</properties>
 	
 	<build>
@@ -255,5 +258,14 @@
 		    <version>${spring-security.version}</version>
 		    <scope>compile</scope>
 		</dependency>
+		
+		<!-- Thymeleaf Extras Spring Security -->
+		<dependency>
+		    <groupId>org.thymeleaf.extras</groupId>
+		    <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+		    <version>${thymeleaf-extras-springsecurity4.version}</version>
+		    <scope>compile</scope>
+		</dependency>
+		
 	</dependencies>
 </project>
